# trdi_adcp_readers

./: .gitignore  140B97C6  MANIFEST  README.md  pyproject.toml  sample_output.txt  setup.py  tests.py
scripts/: convert_trdi.py
src/trdi_adcp_readers/: readers.py
src/trdi_adcp_readers/pd0/: pd0_parser.py
src/trdi_adcp_readers/pd15/: pd0_converters.py
src/trdi_adcp_readers/scripts/: convert_trdi_uhi.py
tests/: 1407C626  sample_output.txt  tests.py
tests/data/: 1407E0CA.PD0  1407E0CA.PD15  C12ADCP_PD15  C12AN_90.PD0
trdi_adcp_readers/: __init__.py  readers.py
trdi_adcp_readers/pd0/: .pd0_parser.py.swp  __init__.py  pd0_parser.py  pd0_parser_sentinelV.py
trdi_adcp_readers/pd15/: __init__.py  pd0_converters.py
