[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trdi_adcp_readers"
version = "1.0"
description = "A library capable of reading various TRDI ADCP data formats including PD15 and PD0 into python native types."
readme = "README.md"
authors = [
    { name = "USF CMS Ocean Technology Group" }
]
maintainers = [
    { name = "Michael Lindemuth", email = "lindemuth@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/USF-COT/trdi_adcp_readers"

[tool.hatch.build]
packages = ["src/trdi_adcp_readers"]

[project.scripts]
convert_trdi = "trdi_adcp_readers.pd15.pd0_converters:main" 