[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trdi_adcp_readers"
version = "25.6.4"
description = "A library capable of reading various TRDI ADCP data formats including PD15 and PD0 into python native types."
readme = "README.md"
authors = [
    { name = "USF CMS Ocean Technology Group" }
]
maintainers = [
    { name = "Michael Lindemuth", email = "lindemuth@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/USF-COT/trdi_adcp_readers"

[tool.hatch.build]
sources = ["src"]

[dependency-groups]
dev = [
    "build>=1.1.1",
    "hatchling>=1.17.1",
    "twine>=4.0.2",
]

[project.scripts]
convert_trdi = "trdi_adcp_readers.scripts.convert_trdi:main"
convert_trdi_uhi = "trdi_adcp_readers.scripts.convert_trdi_uhi:main" 
